# sqlx-database-tester

./: .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md
migrations/: 20210817100920_test.sql
other_dir_migrations/: 20210817100920_test.sql
sqlx-database-tester-macros/: Cargo.toml
sqlx-database-tester-macros/src/: generators.rs  lib.rs
src/: lib.rs
tests/: mod.rs
