[package]
name = "sqlx-database-tester"
version = "0.1.0"
authors = ["Kateřina Churanová <crates@churanova.eu>"]
edition = "2018"
description = "Library for creation of unit / integration tests with sqlx database support"
license = "AGPL-3.0"
resolver = "2"

[features]
runtime-actix = ["sqlx-database-tester-macros/runtime-actix"]
runtime-tokio = ["sqlx-database-tester-macros/runtime-tokio"]

[dependencies]
http = "0.2.4"
sqlx-database-tester-macros = { version = "0.1.0", path = "./sqlx-database-tester-macros" }
uuid = { version = "0.8.1", features = ["v4"] }
dotenv = "0.15.0"

[dev-dependencies]
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres"] }
sqlx-database-tester-macros = { path = "./sqlx-database-tester-macros", features = ["runtime-tokio"]}
tokio = "1.10.0"

[workspace]
members = ["./sqlx-database-tester-macros"]
