[package]
name = "sqlx-database-tester"
version = "0.4.2"
authors = ["Kateřina Churanová <crates@churanova.eu>"]
edition = "2021"
description = "Library for creation of unit / integration tests with sqlx database support"
license = "AGPL-3.0"

[features]
runtime-actix = ["sqlx-database-tester-macros/runtime-actix"]
runtime-tokio = ["sqlx-database-tester-macros/runtime-tokio"]
sqlx-log = ["log"]

[dependencies]
log = { version = "0.4.14", optional = true }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres"] }
sqlx-database-tester-macros = { version = "0.4.2", path = "./sqlx-database-tester-macros" }
uuid = { version = "1.1.2", features = ["v4"] }
dotenv = "0.15.0"

[dev-dependencies]
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres"] }
sqlx-database-tester-macros = { path = "./sqlx-database-tester-macros", features = ["runtime-tokio"]}
tokio = "1.10.0"

[workspace]
members = ["./sqlx-database-tester-macros"]
