[package]
name = "sqlx-database-tester-macros"
version = "0.5.0"
authors = ["Kateřina Churanová <crates@churanova.eu>"]
edition = "2021"
description = "Macros for sqlx-database-tester"
license = "AGPL-3.0"

[lib]
proc-macro = true

[features]
default = ["use-rustls"]
runtime-actix = []
runtime-tokio = []
use-rustls = ["sqlx/runtime-tokio-rustls"]
use-native-tls = ["sqlx/runtime-tokio-native-tls"]

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
darling = "0.20.0"
proc-macro2 = "1.0.56"

[dev-dependencies]
sqlx = { version = "0.6.0", features = ["postgres"] }
sqlx-database-tester = { version = "0.5.0", path = "..", features = [
    "runtime-tokio",
] }
